--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: objective-c
 compiler: clang
-xcode_scheme: test
+xcode_scheme: CI
 before_install:
   - git clone git://github.com/macmade/XSDocgen
   - cd XSDocgen && make && sudo make install && cd ..
