--- a/UTI.xcodeproj/xcshareddata/xcschemes/ARC - Mac Dynamic Library.xcscheme
+++ b/UTI.xcodeproj/xcshareddata/xcschemes/ARC - Mac Dynamic Library.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "056C88A918C8C8AC006260B3"
-               BuildableName = "libUTI.a"
-               BlueprintName = "iOS Static Library"
+               BlueprintIdentifier = "056C884918C8C547006260B3"
+               BuildableName = "libUTI.dylib"
+               BlueprintName = "ARC - Mac Dynamic Library"
                ReferencedContainer = "container:UTI.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -41,8 +41,8 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      selectedDebuggerIdentifier = ""
-      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       buildConfiguration = "Debug"
@@ -52,9 +52,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "056C88A918C8C8AC006260B3"
-            BuildableName = "libUTI.a"
-            BlueprintName = "iOS Static Library"
+            BlueprintIdentifier = "056C884918C8C547006260B3"
+            BuildableName = "libUTI.dylib"
+            BlueprintName = "ARC - Mac Dynamic Library"
             ReferencedContainer = "container:UTI.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
