--- a/UTI.xcodeproj/xcshareddata/xcschemes/MRC - Mac Dynamic Library.xcscheme
+++ b/UTI.xcodeproj/xcshareddata/xcschemes/MRC - Mac Dynamic Library.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "0600"
-   version = "2.0">
+   version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "056C881118C8B85F006260B3"
-               BuildableName = "libUTI.a"
-               BlueprintName = "Mac Static Library"
+               BlueprintIdentifier = "0509E34E19A3E06400D7BC48"
+               BuildableName = "libARC - Mac Dynamic Library copy.dylib"
+               BlueprintName = "MRC - Mac Dynamic Library copy"
                ReferencedContainer = "container:UTI.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -28,34 +28,23 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       buildConfiguration = "Debug">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "05E71B621961D9D100F911C4"
-               BuildableName = "UTI Tests.xctest"
-               BlueprintName = "UTI Tests"
-               ReferencedContainer = "container:UTI.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
-      selectedDebuggerIdentifier = ""
-      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
-      debugXPCServices = "NO"
       allowLocationSimulation = "YES">
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "056C881118C8B85F006260B3"
-            BuildableName = "libUTI.a"
-            BlueprintName = "Mac Static Library"
+            BlueprintIdentifier = "0509E34E19A3E06400D7BC48"
+            BuildableName = "libARC - Mac Dynamic Library copy.dylib"
+            BlueprintName = "MRC - Mac Dynamic Library copy"
             ReferencedContainer = "container:UTI.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -68,6 +57,15 @@
       useCustomWorkingDirectory = "NO"
       buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "0509E34E19A3E06400D7BC48"
+            BuildableName = "libARC - Mac Dynamic Library copy.dylib"
+            BlueprintName = "MRC - Mac Dynamic Library copy"
+            ReferencedContainer = "container:UTI.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
