--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: objective-c
 compiler: clang
+xcode_project: UTI.xcodeproj
 xcode_scheme: CI
 before_install:
   - git clone git://github.com/macmade/XSDocgen
