--- a/UTI.xcodeproj/xcshareddata/xcschemes/MRC - Mac Framework.xcscheme
+++ b/UTI.xcodeproj/xcshareddata/xcschemes/MRC - Mac Framework.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "0509E34219A3E06200D7BC48"
-               BuildableName = "ARC - Mac Framework copy.framework"
+               BuildableName = "UTIMRC.framework"
                BlueprintName = "MRC - Mac Framework copy"
                ReferencedContainer = "container:UTI.xcodeproj">
             </BuildableReference>
@@ -43,7 +43,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "0509E34219A3E06200D7BC48"
-            BuildableName = "ARC - Mac Framework copy.framework"
+            BuildableName = "UTIMRC.framework"
             BlueprintName = "MRC - Mac Framework copy"
             ReferencedContainer = "container:UTI.xcodeproj">
          </BuildableReference>
@@ -61,7 +61,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "0509E34219A3E06200D7BC48"
-            BuildableName = "ARC - Mac Framework copy.framework"
+            BuildableName = "UTIMRC.framework"
             BlueprintName = "MRC - Mac Framework copy"
             ReferencedContainer = "container:UTI.xcodeproj">
          </BuildableReference>
