--- a/UTI.xcodeproj/xcshareddata/xcschemes/MRC - iOS Static Library.xcscheme
+++ b/UTI.xcodeproj/xcshareddata/xcschemes/MRC - iOS Static Library.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "0509E33919A3E06000D7BC48"
-               BuildableName = "libARC - iOS Static Library copy.a"
+               BuildableName = "libUTIMRC.a"
                BlueprintName = "MRC - iOS Static Library copy"
                ReferencedContainer = "container:UTI.xcodeproj">
             </BuildableReference>
@@ -43,7 +43,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "0509E33919A3E06000D7BC48"
-            BuildableName = "libARC - iOS Static Library copy.a"
+            BuildableName = "libUTIMRC.a"
             BlueprintName = "MRC - iOS Static Library copy"
             ReferencedContainer = "container:UTI.xcodeproj">
          </BuildableReference>
@@ -61,7 +61,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "0509E33919A3E06000D7BC48"
-            BuildableName = "libARC - iOS Static Library copy.a"
+            BuildableName = "libUTIMRC.a"
             BlueprintName = "MRC - iOS Static Library copy"
             ReferencedContainer = "container:UTI.xcodeproj">
          </BuildableReference>
