--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: objective-c
 compiler: clang
 xcode_project: UTI.xcodeproj
-xcode_scheme: ARC - Mac Framework
+xcode_scheme: ARC - Mac Static Library
 before_install:
   - bash Scripts/travis-before.sh
 after_success:
