--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,24 @@
 language: objective-c
-compiler: clang
-xcode_project: UTI.xcodeproj
-xcode_scheme: ARC - Mac Framework
+cache:
+    directories:
+    - $HOME/.ccache
 install:
-  - brew install macmade/tap/xcode-coveralls
+- gem install xcpretty
+- brew install ccache
+- PATH=$PATH:/usr/local/opt/ccache/libexec
+- brew install macmade/tap/xcode-coveralls
+- export PYTHONUSERBASE=~/.local
+- easy_install --user scan-build
+script:
+- set -o pipefail && xcodebuild -project "CPPAtomic.xcodeproj" -scheme "CPPAtomic-Tests" build test | xcpretty
+before_script:
+- ccache -s
+- ccache -z
+after_script:
+- ccache -s
 before_install:
   - bash Scripts/travis-before.sh
 after_success:
   - bash Scripts/travis-after.sh
+notifications:
+    slack: xs-labs:FXh1yLXNkpcVxKZhZU6icdhI
