--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
 - export PYTHONUSERBASE=~/.local
 - easy_install --user scan-build
 script:
-- set -o pipefail && xcodebuild -project "CPPAtomic.xcodeproj" -scheme "CPPAtomic-Tests" build test | xcpretty
+- set -o pipefail && xcodebuild -project "UTI.xcodeproj" -scheme "UTI" build test | xcpretty
 before_script:
 - ccache -s
 - ccache -z
