--- a/UTI.xcodeproj/xcshareddata/xcschemes/UTI - Mac Framework.xcscheme
+++ b/UTI.xcodeproj/xcshareddata/xcschemes/UTI - Mac Framework.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "0900"
-   version = "2.0">
+   version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "056C881118C8B85F006260B3"
-               BuildableName = "libUTI.a"
-               BlueprintName = "ARC - Mac Static Library"
+               BlueprintIdentifier = "056C885E18C8C76B006260B3"
+               BuildableName = "UTI.framework"
+               BlueprintName = "UTI - Mac Framework"
                ReferencedContainer = "container:UTI.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -44,21 +44,20 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = ""
-      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
-      debugXPCServices = "NO"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "056C881118C8B85F006260B3"
-            BuildableName = "libUTI.a"
-            BlueprintName = "ARC - Mac Static Library"
+            BlueprintIdentifier = "056C885E18C8C76B006260B3"
+            BuildableName = "UTI.framework"
+            BlueprintName = "UTI - Mac Framework"
             ReferencedContainer = "container:UTI.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
