--- a/UTI.xcodeproj/xcshareddata/xcschemes/UTI - Mac Static Library.xcscheme
+++ b/UTI.xcodeproj/xcshareddata/xcschemes/UTI - Mac Static Library.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "0900"
-   version = "1.3">
+   version = "2.0">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "056C88A918C8C8AC006260B3"
+               BlueprintIdentifier = "056C881118C8B85F006260B3"
                BuildableName = "libUTI.a"
-               BlueprintName = "ARC - iOS Static Library"
+               BlueprintName = "UTI - Mac Static Library"
                ReferencedContainer = "container:UTI.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -50,14 +50,15 @@
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
+      debugXPCServices = "NO"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "056C88A918C8C8AC006260B3"
+            BlueprintIdentifier = "056C881118C8B85F006260B3"
             BuildableName = "libUTI.a"
-            BlueprintName = "ARC - iOS Static Library"
+            BlueprintName = "UTI - Mac Static Library"
             ReferencedContainer = "container:UTI.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
