--- a/UTI.xcodeproj/xcshareddata/xcschemes/UTI - iOS Static Library.xcscheme
+++ b/UTI.xcodeproj/xcshareddata/xcschemes/UTI - iOS Static Library.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "056C884918C8C547006260B3"
-               BuildableName = "libUTI.dylib"
-               BlueprintName = "ARC - Mac Dynamic Library"
+               BlueprintIdentifier = "056C88A918C8C8AC006260B3"
+               BuildableName = "libUTI.a"
+               BlueprintName = "UTI - iOS Static Library"
                ReferencedContainer = "container:UTI.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -44,8 +44,8 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      selectedDebuggerIdentifier = ""
+      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -55,9 +55,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "056C884918C8C547006260B3"
-            BuildableName = "libUTI.dylib"
-            BlueprintName = "ARC - Mac Dynamic Library"
+            BlueprintIdentifier = "056C88A918C8C8AC006260B3"
+            BuildableName = "libUTI.a"
+            BlueprintName = "UTI - iOS Static Library"
             ReferencedContainer = "container:UTI.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
